rename project and add page titles

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
-            "program": "${workspaceFolder}/bin/Debug/netcoreapp2.1/DocumentViewerSample.dll",
+            "program": "${workspaceFolder}/bin/Debug/netcoreapp2.1/ReportServerIntegration.dll",
             "args": [],
             "cwd": "${workspaceFolder}",
             "stopAtEntry": false,
@@ -40,7 +40,7 @@
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
-            "program": "${workspaceFolder}/bin/Debug/netcoreapp2.1/DocumentViewerSample.dll",
+            "program": "${workspaceFolder}/bin/Debug/netcoreapp2.1/ReportServerIntegration.dll",
             "args": [],
             "cwd": "${workspaceFolder}",
             "stopAtEntry": false,
@@ -71,7 +71,7 @@
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
-            "program": "${workspaceFolder}/bin/Debug/netcoreapp2.1/DocumentViewerSample.dll",
+            "program": "${workspaceFolder}/bin/Debug/netcoreapp2.1/ReportServerIntegration.dll",
             "args": [],
             "cwd": "${workspaceFolder}",
             "stopAtEntry": false,
