--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "documentviewersample",
+  "name": "report-server-integration",
   "description": "DevExpress Report and Dashboard Server integration sample",
   "author": "DevExpress",
   "private": true,
