move report server uri to appsettings

--- a/appsettings.json
+++ b/appsettings.json
@@ -4,5 +4,6 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ReportServerBaseUri": "<your-report-server-uri>"
 }
